--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t jayjay0502/LearningDocker -f Dockerfile.dev .
+      - run: docker build -t jayjay0502/LearningDocker-f Dockerfile.dev .
       - run: docker run -e CI=true jayjay0502/Learningdocker npm test
 
       - name: Generate deployment package
