edit gh actions

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,8 +19,8 @@ jobs:
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v18
         with:
-          aws_access_key: ${{ AKIAYDYIFSUSYVTUNGMA }}
-          aws_secret_key: ${{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 }}
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: LearningDocker-gh
           environment_name: Learningdocker-env
           existing_bucket_name: elasticbeanstalk-us-east-1-557826020645
