--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,8 +21,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: LearningDocker-gh
-          environment_name: Learningdocker-env
+          application_name: LearningDocker
+          environment_name: Learningdocker
           existing_bucket_name: elasticbeanstalk-us-east-1-557826020645
           region: us-east-1
           version_label: ${{ github.sha }}
