--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,7 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           application_name: LearningDocker
-          environment_name: Learningdocker
+          environment_name: Learningdocker-env
           existing_bucket_name: elasticbeanstalk-us-east-1-557826020645
           region: us-east-1
           version_label: ${{ github.sha }}
